--- a/app/index.html
+++ b/app/index.html
@@ -32,16 +32,16 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="#/">projetCv2</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/">CV Online</a></li>
+              <li><a ng-href="#/userList">User List</a></li>
+              <li><a ng-href="#/create">Create new CV</a></li>
+              <li><a ng-href="#/update">Update CV</a></li>
+
             </ul>
           </div>
         </div>
@@ -84,6 +84,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/user.js"></script>
+		 <script src="scripts/service/web.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
