--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,10 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/user.js"></script>
-		 <script src="scripts/service/web.js"></script>
+        <script src="scripts/controllers/create.js"></script>
+        <script src="scripts/controllers/update.js"></script>
+
+    <script src="scripts/service/web.js"></script>
 
         <!-- endbuild -->
 </body>
